--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
   min-height: 100vh;
+  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.container-main {
+  padding: 4rem 3rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: grid;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-movie {
+  display: flex;
+  border: 1px solid #252e2e;
+  padding: 0px;
+  margin: 1rem;
+  /*height: 280px;*/
+}
+
+.image-movie {
+  width: 190px;
+  border: 1px solid #4d6766;
+}
+
+.truncateOverflow {
+  --max-lines: 8;
+  position: relative;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
+}
+
+.truncateOverflow::after {
+  content: "";
+  position: absolute;
+  inset-inline-end: 0; /* "right" */
+  width: 1rem;
+  height: 1rem;
+  background: white;
+}
+.description {
+  width: 170px;
+  margin: 1rem 2rem;
+}
+
+.description .details {
+  width: 175px;
+  margin: 0 0 1em 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
+.description .ctaDetails {
+  border-radius: 18px;
+  font-size: inherit;
+  padding: 10px 20px;
+}
+
+.description .details p {
+  margin: 0;
+}
+
+.container-details {
+  display: flex;
+}
+
+.container-details h1 {
+  font-size: 35px;
+}
+.container-details .details {
+  margin: 4rem 3rem 2rem 4rem;
+}
+.container-details .details span {
+  padding: 5px 10px;
+  background: #45c79d94;
+  border-radius: 5px;
+  display: inline;
+  height: 30px;
+  font-size: 12px;
+  margin: 0 5px;
+}
+.container-details .overview {
+  width: 80%;
+  font-size: 18px;
+  margin: 5rem 0;
+}
+.container-details .title {
+  align-items: center;
+  max-width: 85%;
+}
+
+.container-details .title .genre {
+  background-color: #1e7257;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
